Enhanced attachment handling

--- a/Flask_Web_App/tasks.json
+++ b/Flask_Web_App/tasks.json
@@ -5,16 +5,53 @@
     "responsible": "TU",
     "start": "2025-09-03",
     "duration": "4",
-    "depends_on": "",
+    "depends_on": "test2",
     "resources": "",
     "notes": "",
     "pdf_page": "33",
     "status": "In Progress",
     "percent_complete": "23",
-    "parent": null,
+    "parent": "None",
     "milestone": "",
-    "attachments": [],
+    "attachments": [
+      "Pastor Emeritus Parking Sign.pdf"
+    ],
     "document_links": [],
     "color": "#4287f5"
+  },
+  {
+    "id": 2,
+    "name": "test2",
+    "start": "2025-09-05",
+    "responsible": "TU",
+    "status": "In Progress",
+    "percent_complete": 0,
+    "attachments": [],
+    "notes": "",
+    "milestone": "",
+    "color": "#4287f5",
+    "duration": 1,
+    "depends_on": "",
+    "resources": "",
+    "pdf_page": "",
+    "parent": null,
+    "document_links": []
+  },
+  {
+    "id": 3,
+    "name": "test2",
+    "start": "2025-09-05",
+    "responsible": "TU",
+    "status": "Not Started",
+    "percent_complete": "77",
+    "attachments": [],
+    "notes": "",
+    "milestone": "",
+    "duration": "1",
+    "depends_on": "",
+    "resources": "",
+    "pdf_page": "",
+    "parent": "None",
+    "document_links": []
   }
 ]
