--- a/Flask_Web_App/tasks.json
+++ b/Flask_Web_App/tasks.json
@@ -18,5 +18,39 @@
     ],
     "document_links": [],
     "color": "#4287f5"
+  },
+  {
+    "id": 2,
+    "name": "test2",
+    "start": "2025-09-17",
+    "responsible": "",
+    "status": "Not Started",
+    "percent_complete": 0,
+    "attachments": [],
+    "notes": "",
+    "milestone": "",
+    "duration": "7",
+    "parent": "",
+    "depends_on": "",
+    "resources": "",
+    "pdf_page": "",
+    "document_links": []
+  },
+  {
+    "id": 3,
+    "name": "Plunge Pool Power T",
+    "responsible": "TU",
+    "start": "2025-09-07",
+    "duration": "7",
+    "depends_on": "durationTest",
+    "resources": "",
+    "notes": "",
+    "pdf_page": "22",
+    "status": "In Progress",
+    "percent_complete": "40",
+    "parent": null,
+    "milestone": "",
+    "attachments": [],
+    "document_links": []
   }
 ]
