Add interactive Gantt

--- a/Flask_Web_App/tasks.json
+++ b/Flask_Web_App/tasks.json
@@ -3,54 +3,60 @@
     "id": 1,
     "name": "durationTest",
     "responsible": "TU",
-    "start": "2025-09-03",
-    "duration": "4",
+    "start": "2025-09-04",
+    "duration": 4,
     "depends_on": "",
     "resources": "",
     "notes": "",
     "pdf_page": "33",
-    "status": "In Progress",
-    "percent_complete": "23",
+    "status": "Completed",
+    "percent_complete": 100,
     "parent": "None",
     "milestone": "",
     "attachments": [
       "Pastor Emeritus Parking Sign.pdf"
     ],
     "document_links": [],
-    "color": "#4287f5"
+    "color": "#4287f5",
+    "external_task": false,
+    "external_milestone": false
   },
   {
     "id": 2,
     "name": "test2",
-    "start": "2025-09-17",
+    "start": "2025-10-22",
     "responsible": "",
     "status": "Not Started",
     "percent_complete": 0,
     "attachments": [],
     "notes": "",
     "milestone": "",
-    "duration": "7",
+    "duration": 7,
     "parent": "",
     "depends_on": "",
     "resources": "",
     "pdf_page": "",
-    "document_links": []
+    "document_links": [],
+    "external_task": false,
+    "external_milestone": false
   },
   {
     "id": 3,
     "name": "Plunge Pool Power T",
     "responsible": "TU",
-    "start": "2025-09-07",
-    "duration": "7",
+    "start": "2025-09-08",
+    "duration": 18,
     "depends_on": "durationTest",
     "resources": "",
     "notes": "",
     "pdf_page": "22",
     "status": "In Progress",
-    "percent_complete": "40",
+    "percent_complete": 40.0,
     "parent": null,
     "milestone": "",
     "attachments": [],
-    "document_links": []
+    "document_links": [],
+    "external_task": false,
+    "external_milestone": false
   }
 ]
